[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncio>=3.4.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-search-results>=2.4.2",
    "gunicorn>=23.0.0",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.20",
    "langgraph-checkpoint>=2.0.23",
    "langmem>=0.0.17",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "serpapi>=0.1.5",
    "tenacity>=9.0.0",
]
